Fix font hierarchy and spacing on Research page
- Changed paper titles from h2 to h3 for proper HTML hierarchy
- Set paper titles to type-size-5 (1em) with normal weight
- Reduced spacing between papers from 1.5em to 0.75em
- Added margin-top: 0 to remove extra space

Hierarchy: Page title > Category headers (h2) > Paper titles (h3)

--- a/_sass/layout/_archive.scss
+++ b/_sass/layout/_archive.scss
@@ -249,8 +249,8 @@
    ========================================================================== */
 
 .publication-accordion {
-  margin-bottom: 1.5em;
-  padding-bottom: 1.5em;
+  margin-bottom: 0.75em;
+  padding-bottom: 0.75em;
   border-bottom: 1px solid var(--global-border-color);
 
   &:last-child {
@@ -270,10 +270,12 @@
 
   .publication-title {
     margin-bottom: 0.5em;
+    margin-top: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: $type-size-4;
+    font-size: $type-size-5;
+    font-weight: normal;
 
     .accordion-icon {
       font-size: 0.8em;
